# git-commit-ai

./: .env.example  .gitignore  README.md  pyproject.toml
src/: doctor.py  main.py
src/agents/: local_agent.py  openai_agent.py
src/utils/: colors.py  diff_parser.py  helper.py  icons.py
